--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -33,21 +33,21 @@
 
 	<div class="features">
 		<div class="columns">
-			<img src="#" alt="feature cover 1" title="feature cover 1">
+			<img src="images/streaks.png" alt="feature cover 1" title="feature cover 1">
 			<h2 class="feature_title">Project Title 1</h2>
 			<p class="feature_description">"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 		</div>
 
 		<div class="columns">
-			<img src="#" alt="feature cover 2" title="feature cover 2">
+			<img src="images/streaks.png" alt="feature cover 2" title="feature cover 2">
 			<h2 class="feature_title">Project Title 2</h2>
 			<p class="feature_description">"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 		</div>
 
 		<div class="columns">
-			<img src="#" alt="feature cover 3" title="feature cover 3">
+			<img src="images/streaks.png" alt="feature cover 3" title="feature cover 3">
 			<h2 class="feature_title">Project Title 3</h2>
 			<p class="feature_description">"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
