--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-	<nav>
+	<nav class="clearfix">
 		<a id="logo" href="index.html">
 				<img src="images/logo_name.png" alt="G L square logo" title="logo">
 		</a>
